Switch to controller-provided protocol framework
Change-Id: I378be68986a867477044ef8f35a0f50e410de82f
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/bgp/parser-mock/pom.xml
+++ b/bgp/parser-mock/pom.xml
@@ -39,10 +39,11 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>concepts</artifactId>
-		</dependency>
+        </dependency>
+
 		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>framework</artifactId>
+            <groupId>org.opendaylight.controller</groupId>
+			<artifactId>protocol-framework</artifactId>
         </dependency>
 
 		<dependency>
