--- a/bgp/testtool/pom.xml
+++ b/bgp/testtool/pom.xml
@@ -44,9 +44,9 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>concepts</artifactId>
 		</dependency>
-        <dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>framework</artifactId>
+		<dependency>
+            <groupId>org.opendaylight.controller</groupId>
+			<artifactId>protocol-framework</artifactId>
         </dependency>
 
 		<dependency>
