--- a/bgp/parser-api/pom.xml
+++ b/bgp/parser-api/pom.xml
@@ -29,10 +29,6 @@
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>framework</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
 			<artifactId>bgp-concepts</artifactId>
 		</dependency>
 		<dependency>
@@ -42,6 +38,11 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
+        </dependency>
+
+		<dependency>
+            <groupId>org.opendaylight.controller</groupId>
+			<artifactId>protocol-framework</artifactId>
         </dependency>
 
         <dependency>
