--- a/bgp/rib-mock/pom.xml
+++ b/bgp/rib-mock/pom.xml
@@ -42,11 +42,12 @@
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>framework</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
 			<artifactId>util</artifactId>
+        </dependency>
+
+		<dependency>
+            <groupId>org.opendaylight.controller</groupId>
+			<artifactId>protocol-framework</artifactId>
         </dependency>
 
 		<dependency>
