--- a/commons/parent/pom.xml
+++ b/commons/parent/pom.xml
@@ -3,6 +3,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <scm>
+        <connection>scm:git:ssh://git.opendaylight.org:29418/bgpcep.git</connection>
+        <developerConnection>scm:git:ssh://git.opendaylight.org:29418/bgpcep.git</developerConnection>
+        <url>https://wiki.opendaylight.org/view/BGP_LS_PCEP:Main</url>
+        <tag>HEAD</tag>
+    </scm>
     <prerequisites>
         <maven>3.0.4</maven>
     </prerequisites>
@@ -37,6 +43,7 @@
         <maven.info.reports.version>2.7</maven.info.reports.version>
         <maven.jar.version>2.4</maven.jar.version>
         <maven.javadoc.version>2.9.1</maven.javadoc.version>
+        <maven.release.version>2.4.2</maven.release.version>
         <maven.shade.version>2.1</maven.shade.version>
         <maven.site.version>3.3</maven.site.version>
         <mockito.version>1.9.5</mockito.version>
@@ -340,7 +347,12 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
-                    <version>2.4</version>
+                    <version>${maven.jar.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>${maven.release.version}</version>
                 </plugin>
 
                 <!--This plugin's configuration is used to store Eclipse m2e settings
@@ -362,7 +374,7 @@
                                         </goals>
                                     </pluginExecutionFilter>
                                     <action>
-                                        <ignore></ignore>
+                                        <ignore/>
                                     </action>
                                 </pluginExecution>
                                 <pluginExecution>
@@ -375,7 +387,7 @@
                                         </goals>
                                     </pluginExecutionFilter>
                                     <action>
-                                        <ignore></ignore>
+                                        <ignore/>
                                     </action>
                                 </pluginExecution>
                             </pluginExecutions>
@@ -507,7 +519,9 @@
         <profile>
             <id>repoBuild</id>
             <activation>
-                <property><name>repoBuild</name></property>
+                <property>
+                    <name>repoBuild</name>
+                </property>
             </activation>
             <build>
                 <plugins>
