--- a/programming/pom.xml
+++ b/programming/pom.xml
@@ -1,30 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- vi: set et smarttab sw=4 tabstop=4: --><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<!-- vi: set et smarttab sw=4 tabstop=4: -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-	<parent>
-		<groupId>org.opendaylight.bgpcep</groupId>
-		<artifactId>commons.parent</artifactId>
+    <modelVersion>4.0.0</modelVersion>
+    <scm>
+        <connection>scm:git:ssh://git.opendaylight.org:29418/bgpcep.git</connection>
+        <developerConnection>scm:git:ssh://git.opendaylight.org:29418/bgpcep.git</developerConnection>
+        <url>https://wiki.opendaylight.org/view/BGP_LS_PCEP:Main</url>
+        <tag>HEAD</tag>
+    </scm>
+    <parent>
+        <groupId>org.opendaylight.bgpcep</groupId>
+        <artifactId>commons.parent</artifactId>
         <version>0.3.0-SNAPSHOT</version>
         <relativePath>../commons/parent</relativePath>
-	</parent>
-	<prerequisites>
-		<maven>3.0.4</maven>
-	</prerequisites>
+    </parent>
+    <prerequisites>
+        <maven>3.0.4</maven>
+    </prerequisites>
 
-	<modelVersion>4.0.0</modelVersion>
-	<artifactId>programming-parent</artifactId>
-	<description>Programming parent</description>
-	<packaging>pom</packaging>
-	<name>${project.artifactId}</name>
+    <artifactId>programming-parent</artifactId>
+    <description>Programming parent</description>
+    <packaging>pom</packaging>
+    <name>${project.artifactId}</name>
 
-	<modules>
+    <modules>
         <module>api</module>
         <module>impl</module>
         <module>impl-config</module>
         <module>spi</module>
         <module>spi-config</module>
         <module>topology-api</module>
-		<module>tunnel-api</module>
+        <module>tunnel-api</module>
 
         <module>controller-config</module>
     </modules>
