Created separated project for stateful-02.
Change-Id: I1914920cd7006d272eaed260d868018a871cf663
Signed-off-by: Dana Kutenicsova <dkutenic@cisco.com>

--- a/pcep/pom.xml
+++ b/pcep/pom.xml
@@ -27,6 +27,7 @@
     <modules>
         <module>api</module>
         <module>api-config</module>
+        <module>ietf-stateful02</module>
         <module>impl</module>
         <module>impl-config</module>
         <module>spi</module>
@@ -73,6 +74,11 @@
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>pcep-spi-config</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+             <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>pcep-ietf-stateful02</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
