--- a/pcep/impl/pom.xml
+++ b/pcep/impl/pom.xml
@@ -33,6 +33,10 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>pcep-spi</artifactId>
         </dependency>
+         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>pcep-ietf-stateful02</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>${project.groupId}</groupId>
