WIP : created pcep-parsers project
Change-Id: I1914920cd7006d272eaed260d868018a871cf663
Signed-off-by: Dana Kutenicsova <dkutenic@cisco.com>

--- a/pcep/pom.xml
+++ b/pcep/pom.xml
@@ -27,6 +27,7 @@
     <modules>
         <module>api</module>
         <module>api-config</module>
+        <module>parsers</module>
         <module>impl</module>
         <module>impl-config</module>
         <module>spi</module>
