--- a/pcep/ietf-stateful07/pom.xml
+++ b/pcep/ietf-stateful07/pom.xml
@@ -16,8 +16,8 @@
         <version>0.3.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>pcep-tunnel-api</artifactId>
-    <description>Tunnel API for PCEP</description>
+    <artifactId>pcep-ietf-stateful07</artifactId>
+    <description>PCE IETF Stateful model plugin</description>
     <packaging>bundle</packaging>
     <name>${project.artifactId}</name>
     <prerequisites>
@@ -31,28 +31,13 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>pcep-ietf-stateful02</artifactId>
+            <artifactId>concepts</artifactId>
         </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>pcep-ietf-stateful07</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>programming-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>programming-tunnel-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>topology-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>topology-tunnel-api</artifactId>
-        </dependency>
+
+        <!--
+            FIXME: this is in support of the generated code. This should not
+                   be here, but the plugin should bring it in.
+        -->
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>yang-binding</artifactId>
@@ -60,6 +45,16 @@
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>yang-common</artifactId>
+        </dependency>
+
+        <!--
+             FIXME: these are IETF models which are pre-generated in SAL infra.
+                    This should not be here, but rather should somehow be
+                    discovered by the plugin.
+        -->
+        <dependency>
+            <groupId>org.opendaylight.yangtools.model</groupId>
+            <artifactId>ietf-inet-types</artifactId>
         </dependency>
     </dependencies>
 
@@ -76,11 +71,6 @@
                 <configuration>
                     <instructions>
                         <Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
-                        <Import-Package>
-                            *,
-                            org.opendaylight.yangtools.yang.binding.annotations,
-                            org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.topology.programming.rev131102,
-                        </Import-Package>
                     </instructions>
                 </configuration>
             </plugin>
