--- a/pcep/impl/pom.xml
+++ b/pcep/impl/pom.xml
@@ -33,9 +33,13 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>pcep-spi</artifactId>
         </dependency>
-         <dependency>
+        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>pcep-ietf-stateful02</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>pcep-ietf-stateful07</artifactId>
         </dependency>
 
         <dependency>
