Enabled temporary commented documentation generation.
Change-Id: Ia08ef470eabeb1b8f7a5561f56ef6d842e74277b
Signed-off-by: Martin Vitez <mvitez@cisco.com>

--- a/commons/parent/pom.xml
+++ b/commons/parent/pom.xml
@@ -440,11 +440,10 @@
                                             target/generated-sources/sal
                                         </outputBaseDir>
                                     </generator>
-                                    <!--  Bug-294 -->
-                                    <!-- generator>
+                                    <generator>
                                         <codeGeneratorClass>org.opendaylight.yangtools.yang.unified.doc.generator.maven.DocumentationGeneratorImpl</codeGeneratorClass>
                                         <outputBaseDir>target/site</outputBaseDir>
-                                    </generator-->
+                                    </generator>
                                     <generator>
                                         <codeGeneratorClass>org.opendaylight.yangtools.yang.wadl.generator.maven.WadlGenerator</codeGeneratorClass>
                                         <outputBaseDir>target/site</outputBaseDir>
