Eradicate mockito-configuration references
Change-Id: I5a36564f8ffaa2380c734329e728edbcd768e053
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/bgp/parser-spi-config/pom.xml
+++ b/bgp/parser-spi-config/pom.xml
@@ -46,10 +46,8 @@
             <type>test-jar</type>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>mockito-configuration</artifactId>
-            <version>${project.version}</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
