Cleaned up .project files.
Change-Id: Idf6ffb6d6060a2e1c613f216bea7fd7700c6c88d
Signed-off-by: Dana Kutenicsova <dkutenic@cisco.com>

--- a/bgp/controller-config/.project
+++ b/bgp/controller-config/.project
@@ -8,7 +8,7 @@
 -->
 <projectDescription>
 
-	<name>programming-spi</name>
+	<name>bgp-controller-config</name>
 
 	<comment></comment>
 	<projects>
@@ -26,7 +26,6 @@
 		</buildCommand>
 	</buildSpec>
 	<natures>
-		<nature>org.eclipse.pde.PluginNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.m2e.core.maven2Nature</nature>
 	</natures>
